[dataframe] minor perf improvements